# alchemy

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
examples/: cube.cpp
include/: component.hpp  schedule.hpp  util.hpp  world.hpp
include/alchemy/: alchemy.hpp
include/alchemy/asset/: asset.hpp  loader.hpp  manager.hpp  texture.hpp
include/alchemy/async/: mutex.hpp  pool.hpp
include/alchemy/ecs/: component.hpp  entity.hpp  schedule.hpp  system.hpp  world.hpp
include/alchemy/render/: mesh.hpp  primitive.hpp
include/alchemy/util/: btree.hpp  result.hpp
include/ecs/: component.hpp  entity.hpp  schedule.hpp  system.hpp
include/util/: btree.hpp  mutex.hpp
src/: alchemy.cpp  util.cpp
src/alchemy/asset/: loader.cpp  manager.cpp
src/alchemy/async/: mutex.cpp
src/alchemy/ecs/: schedule.cpp
src/alchemy/render/: mesh.cpp
src/alchemy/util/: btree.cpp  result.cpp
src/util/: btree.cpp  mutex.cpp  result.cpp
tests/: btree.cpp
